# stick-lib

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
cmake/: stick-config.cmake  stick_lib.in
doc/theme/: doxygen_footer.html  doxygen_header.html
include/: stick_crypto  stick_data_structures  stick_defines  stick_error  stick_memory  stick_string  stick_templates
include/stick/crypto/hash/: base_hash.hpp  hash_fnv1.hpp  hash_fnv1a.hpp
include/stick/data_structures/: array.hpp  array.tpp  array_impl.hpp  array_impl.tpp  list_constexpr.hpp  pair.hpp  pair.tpp  pair_impl.hpp  pair_impl.tpp
include/stick/defines/: arch.hpp  compiler.hpp  endian.hpp  os.hpp  predef.hpp  types.hpp
include/stick/error/: base_error.hpp  cast_error.hpp  generic_error.hpp  memory_error.hpp  out_of_range_error.hpp
include/stick/memory/: management.hpp  management.tpp  management_impl.hpp  management_impl.tpp  scoped_pointer.hpp  scoped_pointer.tpp  scoped_pointer_impl.hpp  scoped_pointer_impl.tpp  storage.hpp  storage.tpp
include/stick/string/: casting.hpp  casting_impl.hpp  casting_impl.tpp  cstring.hpp  string.hpp  wcasting.hpp  wcasting_impl.hpp  wcasting_impl.tpp  wcstring.hpp  wstring.hpp
include/stick/templates/: numeric.hpp  numeric.tpp  numeric_impl.hpp  numeric_impl.tpp  reference.hpp  reference.tpp  reference_impl.hpp  reference_impl.tpp  types.tpp  types_impl.tpp
source/stick/crypto/hash/: base_hash.cpp  hash_fnv1.cpp  hash_fnv1a.cpp
source/stick/error/: base_error.cpp  cast_error.cpp  generic_error.cpp  memory_error.cpp  out_of_range_error.cpp
source/stick/string/: casting.cpp  cstring.cpp  string.cpp  wcasting.cpp  wcstring.cpp  wstring.cpp
